[project]
name = "feature-to-pydict-gp-toolbox"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "GP Python Toolbox for converting Feature to Python dictionary"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "feature-to-pydict-gp-toolbox",
]
license = {text = "MIT License"}
authors = [
  {name = "Nur Yahya", email = "urbannurr@gmail.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
feature_to_pydict_gp_toolbox = "feature_to_pydict_gp_toolbox.cli:main"

[project.optional-dependencies]
all = [
    "feature-to-pydict-gp-toolbox[extra]",
]

extra = [
    "pandas",
]


[tool]
[tool.setuptools.packages.find]
include = ["feature_to_pydict_gp_toolbox*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "feature_to_pydict_gp_toolbox/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88


[project.urls]
Homepage = "https://github.com/nuryahya/feature-to-pydict-gp-toolbox"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"